# python-project-lvl4

./: .coveragerc  .env.example  .gitignore  .travis.yml  Makefile  README.md  database.yml  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py  views.py  wsgi.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20201027_1817.py  0003_auto_20201027_1825.py  0004_auto_20201028_1242.py  0005_auto_20201028_1616.py
tasks/static/css/: styles.css
tasks/templates/: base.html  create_status.html  create_tag.html  create_task.html  index.html  status_detail.html  status_list.html  tag_detail.html  tag_list.html  task_detail.html  task_list.html  update_status.html  update_task.html
templates/: base.html  index.html
templates/registration/: login.html  register.html
