[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Roman-Sergeichuk <sergeichuk.roman@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.2"
django-bootstrap4 = "^2.3.1"
rollbar = "^0.15.1"
python-dotenv = "^0.14.0"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
dj-database-url = "^0.5.0"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
